@@ -26,10 +26,12 @@
 10. Add new round options - extra and max.
 11. Don't etch disabled items.
 12. Use text colour for focus indicator in tree/list/etc views.
+13. When specifying custom gradients, add the pssibility to have no
+    internal border - optins are now none, light, 3d
 
 0.61.5
 ------
-1. Fix crash when drawing focus - occus when using alt-tab in xfwm4
+1. Fix crash when drawing focus - occurs when using alt-tab in xfwm4
 
 0.61.4
 ------
